--- a/app/views/pet_histories/show.html.erb
+++ b/app/views/pet_histories/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Pets:</strong>
-  <%= @pet_history.pets %>
+  <%= @pet_history.pet.name %>
 </p>
 
 <%= link_to 'Edit', edit_pet_history_path(@pet_history) %> |
