--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Pets</h1>
+<%= link_to 'Ver todo el historial de atenciones a mascotas',   pet_histories_path%>
 
 <table>
   <thead>
@@ -18,6 +19,7 @@
         <td><%= pet.name %></td>
         <td><%= pet.breed %></td>
         <td><%= pet.date_of_birth %></td>
+        <td><%= pet.pet_histories %></td>
         <td><%= link_to 'Show', pet %></td>
         <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
         <td><%= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
