--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -9,6 +9,8 @@
       <th>Name</th>
       <th>Breed</th>
       <th>Date of birth</th>
+      <th>Numero de atenciones</th>
+      <th>Fechas de atencion</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,7 +21,8 @@
         <td><%= pet.name %></td>
         <td><%= pet.breed %></td>
         <td><%= pet.date_of_birth %></td>
-        <td><%= pet.pet_histories %></td>
+        <td><%= pet.pet_histories.count %></td>
+        <td><%= pet.pet_histories.pluck(:vet_visit_date) %></td>
         <td><%= link_to 'Show', pet %></td>
         <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
         <td><%= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
